--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title:       "RVOS: End-to-End Recurrent Network for Video Object Segmentation"
 keywords:    "computer vision, deep learning, video object segmentation"
 description: "Description here"
 source_link: "https://github.com/imatge-upc/rvos"
-favicon:     "img/upc.ico"
+favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
 # google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
 
